@@ -6,7 +6,7 @@
 <h1>ElectionAudits Data Site</h1>
 
 <p>This site is powered by the
-<a href="http://mcburnett.org/neal/electionaudits/">
+<a href="http://neal.mcburnett.org/electionaudits/">
  ElectionAudits software</a>,
 which provides software and documentation in support of
 the <a href="http://electionaudits.org/principles">
@@ -23,14 +23,14 @@ and the other work of <a href="http://electionaudits.org/">
 </blockquote>
 
 <p>That is the place to get the source code, file bugs,
-make contributions, etc.
+make contributions, learn about election auditing, etc.
 </p>
 
 <p>
 To get started entering your own data, see the
 README file that came with this software, or
 view the lastest version at
-<a href="http://mcburnett.org/neal/electionaudits/README">README</a>.
+<a href="http://neal.mcburnett.org/electionaudits/README">README</a>.
 </p>
 <p>
 See also the
