@@ -1,3 +1,9 @@
+2008-10-10    <neal@bcn.boulder.co.us>
+
+	* audittools/settings.py: 
+	comment out 'lukeplant_me_uk.django.validator' and 'django_extensions'
+	Improve documentation
+	
 2008-10-09    <neal@bcn.boulder.co.us>
 
 	* electionaudit/templates/electionaudit/report.html: 
